--- a/pages/equipo/equipo.module.scss
+++ b/pages/equipo/equipo.module.scss
@@ -1,11 +1,22 @@
 @import "../../styles/themeStyles.module.scss";
 
-.marquee_1{
-    margin-bottom: calc(40px + (200 - 40) * ((100vw - 1200px) / (3840 - 1200)));   
-    @media screen and (max-width: 1024px){
-        margin-bottom: calc(30px + (100 - 30) * ((100vw - 300px) / (1024 - 300)));
+.pageBuilder
+{
+    div[data-id="highlighted_1"]{
+        margin-bottom: calc(70px + (220 - 70) * ((100vw - 1200px) / (3840 - 1200)));
+        @media screen and (max-width: 1024px){
+            margin-bottom: calc(40px + (140 - 40) * ((100vw - 300px) / (1024 - 300)));
+        }
     } 
+
+    div[data-id="marquee_1"]{
+        margin-bottom: calc(40px + (200 - 40) * ((100vw - 1200px) / (3840 - 1200)));   
+        @media screen and (max-width: 1024px){
+            margin-bottom: calc(30px + (100 - 30) * ((100vw - 300px) / (1024 - 300)));
+        } 
+    }
 }
+
 
 .carrousel_members{
     margin-bottom: calc(85px + (290 - 85) * ((100vw - 1200px) / (3840 - 1200)));
