--- a/pages/novedades/[category]/title.module.scss
+++ b/pages/novedades/[category]/title.module.scss
@@ -12,6 +12,13 @@
         margin-bottom: calc(5px + (10 - 5) * ((100vw - 300px) / (1024 - 300)));
     }
 
+    @media screen and (min-width: 1024px){
+        header
+            {
+                height: 80vh !important;
+            }
+        }
+
     .col_left{
         grid-area: left; 
 
