--- a/pages/producciones/produccion.module.scss
+++ b/pages/producciones/produccion.module.scss
@@ -18,13 +18,20 @@
         grid-template-columns: 100% 100%; 
         margin-bottom: calc(50px + (175 - 50) * ((100vw - 300px) / (1024 - 300)));
     }
-
+    @media screen and (min-width: 1024px){
+    header
+        {
+            height: 80vh !important;
+        }
+    }
     .col_left{
         grid-area: left;  
         padding-right: calc(100px + (290 - 100) * ((100vw - 1200px) / (3840 - 1200)));
         @media screen and (max-width: 1024px){
             padding-right: 0;
         }
+
+        
 
         .back_arrow{
             text-decoration: none;
