--- a/pages/asesorias/asesorias.module.scss
+++ b/pages/asesorias/asesorias.module.scss
@@ -44,6 +44,9 @@
             width: calc(450px + (1320 - 450) * ((100vw - 1200px) / (3840 - 1200)));
             margin-left: calc(32px + (82 - 32) * ((100vw - 1200px) / (3840 - 1200)));
             cursor: pointer;
+            display:block;
+            text-decoration: none;
+
             @media screen and (max-width: 1024px){
                 width: calc(255px + (880 - 255) * ((100vw - 300px) / (1024 - 300)));
                 margin-left: 0;
