--- a/pages/producciones/produccion.module.scss
+++ b/pages/producciones/produccion.module.scss
@@ -18,20 +18,19 @@
         grid-template-columns: 100% 100%; 
         margin-bottom: calc(50px + (175 - 50) * ((100vw - 300px) / (1024 - 300)));
     }
-    @media screen and (min-width: 1024px){
-    header
-        {
+    
+    header{
+        @media screen and (min-width: 1024px){
             height: 80vh !important;
         }
     }
+        
     .col_left{
         grid-area: left;  
         padding-right: calc(100px + (290 - 100) * ((100vw - 1200px) / (3840 - 1200)));
         @media screen and (max-width: 1024px){
             padding-right: 0;
-        }
-
-        
+        }       
 
         .back_arrow{
             text-decoration: none;
@@ -61,11 +60,14 @@
         }
 
         h1{
-            @include font-level-1;
+            @include font-level-2;
+            line-height: 130%;
             font-weight: 400;     
             color: $deep-blue;  
             margin-bottom: calc(36px + (80 - 36) * ((100vw - 1200px) / (3840 - 1200))); 
             @media screen and (max-width: 1024px){
+                @include font-level-1;
+                line-height: normal;
                 margin-bottom: calc(20px + (80 - 20) * ((100vw - 300px) / (1024 - 300)));
             }
         }
@@ -164,15 +166,19 @@
     }
 
     .col_right{ 
-        grid-area: right;  
+        grid-area: right;        
 
         .content{
-            padding-top: calc(38px + (60 - 38) * ((100vw - 1200px) / (3840 - 1200)));
+            padding-top: calc(66px + (155 - 66) * ((100vw - 1200px) / (3840 - 1200)));
             margin-bottom: calc(38px + (60 - 38) * ((100vw - 1200px) / (3840 - 1200)));
             @media screen and (max-width: 1024px){
                 padding-top: calc(30px + (100 - 30) * ((100vw - 300px) / (1024 - 300)));
                 margin-bottom: calc(30px + (100 - 30) * ((100vw - 300px) / (1024 - 300))); 
             }
+            >:first-child{
+                margin-top: 0;
+                padding-top: 0;
+            } 
             h3{
                 @include font-level-3;
                 color: $deep-blue;
@@ -195,6 +201,13 @@
                 }
             }
 
+            a{
+                color: $gray-2;
+                &:hover{
+                    color: $green-1;
+                }
+            }
+
             img {
                 width: 100%;
                 height: auto;
@@ -210,6 +223,7 @@
             p, button{
                 @include font-level-4;
                 display: inline-block;
+                line-height: 144%;
             }
             p{color: $deep-blue;}
 
