--- a/pages/producciones/produccion.module.scss
+++ b/pages/producciones/produccion.module.scss
@@ -185,6 +185,9 @@
                 font-weight: 500;
                 padding-top: calc(28px + (95 - 28) * ((100vw - 1200px) / (3840 - 1200)));
                 margin-bottom: calc(24px + (56 - 24) * ((100vw - 1200px) / (3840 - 1200)));
+                strong{
+                    font-weight: 500;
+                }
                 @media screen and (max-width: 1024px){
                     padding-top: calc(22px + (82 - 22) * ((100vw - 300px) / (1024 - 300))); 
                     margin-bottom: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300))); 
@@ -195,7 +198,7 @@
                 color: $deep-blue;
                 font-weight: 400;
                 line-height: 144%;
-                margin-bottom: calc(24px + (56 - 24) * ((100vw - 1200px) / (3840 - 1200)));
+                margin-bottom: calc(24px + (56 - 24) * ((100vw - 1200px) / (3840 - 1200)));                
                 @media screen and (max-width: 1024px){
                     margin-bottom: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300))); 
                 }
@@ -211,6 +214,23 @@
             img {
                 width: 100%;
                 height: auto;
+            }
+
+            ul{
+                padding-left: calc(15px + (38 - 15) * ((100vw - 1200px) / (3840 - 1200)));    
+                @media screen and (max-width: 1024px){
+                    padding-left: calc(12px + (28 - 12) * ((100vw - 300px) / (1024 - 300))); 
+                }   
+                li{
+                    @include font-level-4;
+                    color: $deep-blue;
+                    font-weight: 400;
+                    line-height: 144%;
+                    margin-bottom: calc(24px + (56 - 24) * ((100vw - 1200px) / (3840 - 1200)));                
+                    @media screen and (max-width: 1024px){
+                        margin-bottom: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300))); 
+                    }
+                }
             }
         }
 
