--- a/pages/novedades/[category]/title.module.scss
+++ b/pages/novedades/[category]/title.module.scss
@@ -12,13 +12,6 @@
         margin-bottom: calc(5px + (10 - 5) * ((100vw - 300px) / (1024 - 300)));
     }
 
-    @media screen and (min-width: 1024px){
-        header
-            {
-                height: 80vh !important;
-            }
-        }
-
     .col_left{
         grid-area: left; 
 
@@ -81,6 +74,14 @@
             }
             a{
                 color: $deep-blue;
+                @media screen and (min-width: 1025px){
+                    &:hover{
+                        color: $green-1;
+                    }
+                }
+            }
+            strong{
+                font-weight: 600;
             }
         }
 
@@ -99,20 +100,29 @@
                     margin-bottom: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300))); 
                 }
             }
-        }
-
-        video {
-            width: 100%;
-            height: auto;
-            margin-bottom: calc(24px + (56 - 24) * ((100vw - 1200px) / (3840 - 1200)));
-            @media screen and (max-width: 1024px){
-                margin-bottom: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300))); 
-            }
-        }
+        }        
 
         img {
             width: 100%;
             height: auto;
+        }
+
+        div[data-type="video"]{
+            position: relative;
+            padding-bottom: 56.25%;
+            height: 0;
+            overflow: hidden;
+            margin-bottom: calc(24px + (56 - 24) * ((100vw - 1200px) / (3840 - 1200)));
+            @media screen and (max-width: 1024px){
+                margin-bottom: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300))); 
+            }
+            iframe{
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+            }
         }
 
         .body {
@@ -181,20 +191,17 @@
                     color: $deep-blue;
                     font-weight: 400;
                     line-height: 144%;
-                    margin-bottom: calc(14px + (46 - 14) * ((100vw - 1200px) / (3840 - 1200)));   
+                    margin-bottom: calc(14px + (46 - 14) * ((100vw - 1200px) / (3840 - 1200))); 
                     &:last-of-type{
                         margin-bottom: 0;
                     }                 
-                }
+                }                
             }
         } 
         
     }
     
     .col_right{ 
-        @media screen and (min-width: 1024px){
-            height: 80vh !important;
-        }
         h2{
             @include font-level-4;
             font-weight: 400;
