--- a/pages/producciones/produccion.module.scss
+++ b/pages/producciones/produccion.module.scss
@@ -12,17 +12,11 @@
     display: grid;
     grid-template-areas: 'left right';
     grid-template-columns: 50% 50%; 
-    margin-bottom: calc(120px + (420 - 120) * ((100vw - 1200px) / (3840 - 1200)));
+    margin-bottom: calc(120px + (420 - 120) * ((100vw - 1200px) / (3840 - 1200)));    
     @media screen and (max-width: 1024px){
         grid-template-areas: 'left' 'right';
         grid-template-columns: 100% 100%; 
         margin-bottom: calc(50px + (175 - 50) * ((100vw - 300px) / (1024 - 300)));
-    }
-    
-    header{
-        @media screen and (min-width: 1024px){
-            height: 80vh !important;
-        }
     }
         
     .col_left{
@@ -77,10 +71,6 @@
             color: $deep-blue;
             font-weight: 400;
             line-height: 144%;
-            /* margin-bottom: calc(20px + (50 - 20) * ((100vw - 1200px) / (3840 - 1200)));
-            @media screen and (max-width: 1024px){
-                margin-bottom: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300)));
-            } */
             margin-bottom: calc(40px + (100 - 40) * ((100vw - 1200px) / (3840 - 1200)));
             @media screen and (max-width: 1024px){
                 margin-bottom: calc(20px + (80 - 20) * ((100vw - 300px) / (1024 - 300)));
@@ -169,7 +159,7 @@
         grid-area: right;        
 
         .content{
-            padding-top: calc(66px + (155 - 66) * ((100vw - 1200px) / (3840 - 1200)));
+            padding-top: calc(60px + (145 - 60) * ((100vw - 1200px) / (3840 - 1200)));
             margin-bottom: calc(38px + (60 - 38) * ((100vw - 1200px) / (3840 - 1200)));
             @media screen and (max-width: 1024px){
                 padding-top: calc(30px + (100 - 30) * ((100vw - 300px) / (1024 - 300)));
@@ -205,9 +195,11 @@
             }
 
             a{
-                color: $gray-2;
-                &:hover{
-                    color: $green-1;
+                color: $deep-blue;
+                @media screen and (min-width: 1025px){
+                    &:hover{
+                        color: $green-1;
+                    }
                 }
             }
 
@@ -230,6 +222,24 @@
                     @media screen and (max-width: 1024px){
                         margin-bottom: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300))); 
                     }
+                }
+            }
+
+            div[data-type="video"]{
+                position: relative;
+                padding-bottom: 56.25%;
+                height: 0;
+                overflow: hidden;
+                margin-bottom: calc(24px + (56 - 24) * ((100vw - 1200px) / (3840 - 1200)));
+                @media screen and (max-width: 1024px){
+                    margin-bottom: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300))); 
+                }
+                iframe{
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
                 }
             }
         }
