--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -30,6 +30,10 @@ body{
   background-color: $white;
 }
 
+.main-container{
+  overflow: hidden;
+}
+
 button{
     background-color: transparent;
     outline: inherit;
