--- a/pages/asesorias/case.module.scss
+++ b/pages/asesorias/case.module.scss
@@ -221,12 +221,16 @@
                     color: $deep-blue;
                     font-weight: 400;
                     line-height: 144%;
-                    &:last-child{
+                    margin-bottom: calc(24px + (56 - 24) * ((100vw - 1200px) / (3840 - 1200)));                
+                    @media screen and (max-width: 1024px){
+                        margin-bottom: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300))); 
+                    }
+                    /* &:last-child{
                         margin-bottom: calc(24px + (56 - 24) * ((100vw - 1200px) / (3840 - 1200)));                
                         @media screen and (max-width: 1024px){
                             margin-bottom: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300))); 
                         }
-                    }                    
+                    } */                    
                 }
             }
 
