--- a/pages/producciones/produccion.module.scss
+++ b/pages/producciones/produccion.module.scss
@@ -123,7 +123,17 @@
                             }
                         }
                     }
-                }                     
+                }   
+                &.link{
+                    span{                        
+                        img{
+                            width: calc(16px + (36 - 16) * ((100vw - 1200px) / (3840 - 1200)));
+                            @media screen and (max-width: 1024px){
+                                width: calc(10px + (23 - 10) * ((100vw - 300px) / (1024 - 300))); 
+                            }
+                        }
+                    }
+                }                   
                 &.share{
                     span{                        
                         img{
