--- a/pages/novedades/[category]/title.module.scss
+++ b/pages/novedades/[category]/title.module.scss
@@ -89,6 +89,9 @@
             }
             a{
                 color: $deep-blue;
+                strong{
+                    font-weight: 400;
+                }
                 @media screen and (min-width: 1025px){
                     &:hover{
                         color: $green-1;
