--- a/pages/investigacion/project.module.scss
+++ b/pages/investigacion/project.module.scss
@@ -260,3 +260,52 @@
         }        
     }
 }
+
+.related {
+    h3{
+        @include font-level-3;
+        color: $deep-blue;
+        font-weight: 500;
+        padding-top: calc(28px + (95 - 28) * ((100vw - 1200px) / (3840 - 1200)));
+        margin-bottom: calc(24px + (56 - 24) * ((100vw - 1200px) / (3840 - 1200)));
+        @media screen and (max-width: 1024px){
+            padding-top: calc(22px + (82 - 22) * ((100vw - 300px) / (1024 - 300))); 
+            margin-bottom: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300))); 
+        } 
+    }
+}
+
+.carrousel{
+
+    .swiper-button-next {
+        right: 0 !important;
+    }
+ 
+    margin-bottom: calc(60px + (160 - 60) * ((100vw - 1200px) / (3840 - 1200)));
+    @media screen and (max-width: 1024px){
+        margin-bottom: calc(35px + (115 - 35) * ((100vw - 300px) / (1024 - 300)));
+    }
+
+    .swiperSlide
+    {
+        margin-left: 0 !important;
+    }
+
+    .card{
+
+        @include basic-card-2; 
+
+        margin-left: 0 !important;
+        margin-right: calc(32px + 50 * (100vw - 1200px) / 2640);
+      
+        width: calc(415px + (1140 - 415) * ((100vw - 1200px) / (3840 - 1200)));
+        @media screen and (max-width: 1024px){
+            width: calc(255px + (880 - 255) * ((100vw - 300px) / (1024 - 300)));
+        }            
+    }
+    :last-of-type{
+        .card{
+            padding-bottom: calc(34.8px + (90 - 34.8) * ((100vw - 1388px) / (3840 - 1388)));  
+        }
+    }
+}
