--- a/pages/novedades/[category]/title.module.scss
+++ b/pages/novedades/[category]/title.module.scss
@@ -76,6 +76,7 @@
             margin-bottom: calc(24px + (56 - 24) * ((100vw - 1200px) / (3840 - 1200)));
             @media screen and (max-width: 1024px){
                 margin-bottom: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300))); 
+                line-height: 150%;
             }
             &.info{
                 color: $green-1;
