--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,9 +5,9 @@
 {
     margin: 0;
     box-sizing: border-box;
-    -moz-text-size-adjust: none;
-    -webkit-text-size-adjust: none;
-    text-size-adjust: none;
+    //-moz-text-size-adjust: none;
+    //-webkit-text-size-adjust: none;
+    //text-size-adjust: none;
 }
 
 html, body, #__next {
