--- a/pages/asesorias/case.module.scss
+++ b/pages/asesorias/case.module.scss
@@ -216,7 +216,7 @@
                 }
             }
 
-            div[data-type="img-w-pie"]{
+            div[data-type="img-w-pie"], div[data-type="img-w-pie-2"]{
                 padding-top: calc(24px + (56 - 24) * ((100vw - 1200px) / (3840 - 1200)));                
                 @media screen and (max-width: 1024px){
                     padding-top: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300))); 
@@ -224,6 +224,13 @@
                 p{
                     @include font-level-5;
                     color: $gray-1;
+                }
+            }
+
+            div[data-type="img-w-pie-2"]{
+                padding-bottom: calc(18px + (48 - 18) * ((100vw - 1200px) / (3840 - 1200)));                
+                @media screen and (max-width: 1024px){
+                    padding-bottom: calc(12px + (34 - 12) * ((100vw - 300px) / (1024 - 300))); 
                 }
             }
         }
